--- a/public/custom/assets/css/templatemo-space-dynamic.css
+++ b/public/custom/assets/css/templatemo-space-dynamic.css
@@ -878,9 +878,12 @@ Banner Style
 .main-banner .left-content h2 {
   font-size: 25px;
   font-weight: 700;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
   color: #2a2a2a;
-  line-height: 50px;
+  line-height: 40px;
+  text-align: justify;
+  word-spacing:-2px;
+
 }
 
 .main-banner .left-content h2 em {
